force-app/main/default/objects/Campaign/fields/AssignmentType__c.field-meta.xml
<CustomField>
    <fullName>AssignmentType__c</fullName>
    <label>Tipo Assegnazione Campaign Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>