force-app/main/default/objects/Campaign/fields/BillTypeMessage__c.field-meta.xml
<CustomField>
    <fullName>BillTypeMessage__c</fullName>
    <label>Tipo Messaggio in Bolletta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nessuno</fullName>
            </value>
            <value>
                <fullName>Testo Statico</fullName>
            </value>
            <value>
                <fullName>Testo Statico e Codice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>