force-app/main/default/objects/Campaign/fields/CampaignMemberAssigment__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberAssigment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione con l’oggetto ‘Assegnazione Campaign Member’, obbligatorio se “Assegnazione Automatica Campaign Member” = ‘Sì’</description>
    <label>Assegnazione Campaign Member</label>
    <referenceTo>CampaignMemberAssigment__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>