force-app/main/default/objects/Campaign/fields/CampaignMemberPercentageAllocation__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberPercentageAllocation__c</fullName>
    <label>Assegnazione percentuale Campaign Member</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>