force-app/main/default/objects/Campaign/fields/CaseCategory__c.field-meta.xml
<CustomField>
    <fullName>CaseCategory__c</fullName>
    <label>Categoria Case Predefinita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modifiche Anagrafiche</fullName>
            </value>
            <value>
                <fullName>Reclami</fullName>
            </value>
            <value>
                <fullName>Preventivi</fullName>
            </value>
            <value>
                <fullName>Autolettura</fullName>
            </value>
            <value>
                <fullName>Disattivazioni</fullName>
            </value>
            <value>
                <fullName>Fatturazione</fullName>
            </value>
            <value>
                <fullName>Informative</fullName>
            </value>
            <value>
                <fullName>Morosità</fullName>
            </value>
            <value>
                <fullName>Pagamenti</fullName>
            </value>
            <value>
                <fullName>Verifiche</fullName>
            </value>
            <value>
                <fullName>Variazioni</fullName>
            </value>
            <value>
                <fullName>Voltura</fullName>
            </value>
            <value>
                <fullName>Post Sales VAS</fullName>
            </value>
            <value>
                <fullName>Indennizzi</fullName>
            </value>
            <value>
                <fullName>Annullamento</fullName>
            </value>
            <value>
                <fullName>Canone Rai</fullName>
            </value>
            <value>
                <fullName>VOTIVE Modena</fullName>
            </value>
            <value>
                <fullName>Notifiche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>