force-app/main/default/objects/Campaign/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campagna CRM</fullName>
            </value>
            <value>
                <fullName>Campagna Outbound</fullName>
            </value>
            <value>
                <fullName>Campagna Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Campagna Contenitore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>