force-app/main/default/objects/Campaign/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Canale verso il quale verrà erogata la campagna</description>
    <label>Canale</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefonico Inbound</fullName>
            </value>
            <value>
                <fullName>Sportello</fullName>
            </value>
            <value>
                <fullName>SOL</fullName>
            </value>
            <value>
                <fullName>Telefonico Outbound</fullName>
            </value>
            <value>
                <fullName>Door to Door</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Cartaceo</fullName>
            </value>
            <value>
                <fullName>Bolletta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>