force-app/main/default/objects/Campaign/fields/CodeConventionQuantity__c.field-meta.xml
<CustomField>
    <fullName>CodeConventionQuantity__c</fullName>
    <label>Quantità Codici convenzione</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>