force-app/main/default/objects/Campaign/fields/CodeGenerationRule__c.field-meta.xml
<CustomField>
    <fullName>CodeGenerationRule__c</fullName>
    <label>Regola generazione codice</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CodeManagementModel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manuale</fullName>
            </value>
            <value>
                <fullName>PrefissoProgressivo</fullName>
                <label>Prefisso + Progressivo</label>
            </value>
            <value>
                <fullName>Prefisso + Nome + Cognome + Progressivo</fullName>
            </value>
            <value>
                <fullName>CognomeProgressivo</fullName>
                <isActive>false</isActive>
                <label>Cognome + Progressivo</label>
            </value>
            <value>
                <fullName>PrefissoNome</fullName>
                <isActive>false</isActive>
                <label>Prefisso + Nome</label>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>