force-app/main/default/objects/Campaign/fields/CodeManagementModel__c.field-meta.xml
<CustomField>
    <fullName>CodeManagementModel__c</fullName>
    <description>Generico, Per singolo Campaign Member, Porta un amico: selezionabile solo con Campagne MC e Campagne Outbound con canale Bolletta. Pubblico e Convenzione sono compatibili solo con Campagne CRM</description>
    <label>Modello Gestione Codici</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nessuno</fullName>
            </value>
            <value>
                <fullName>Generico</fullName>
            </value>
            <value>
                <fullName>Per singolo Campaign Member</fullName>
            </value>
            <value>
                <fullName>Porta un amico</fullName>
            </value>
            <value>
                <fullName>Pubblico</fullName>
            </value>
            <value>
                <fullName>Convenzione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>