force-app/main/default/objects/Campaign/fields/CodeValidityEndDate__c.field-meta.xml
<CustomField>
    <fullName>CodeValidityEndDate__c</fullName>
    <description>Data, opzionale, oltre la quale i codici non hanno più validità</description>
    <label>Data fine validità Codice Commerciale</label>
    <type>Date</type>
</CustomField>