force-app/main/default/objects/Campaign/fields/DateNextGeneration__c.field-meta.xml
<CustomField>
    <fullName>DateNextGeneration__c</fullName>
    <description>Data corrispondente alla successiva generazione automatica</description>
    <label>Data prossima generazione</label>
    <type>Date</type>
</CustomField>