force-app/main/default/objects/Campaign/fields/FlowType__c.field-meta.xml
<CustomField>
    <fullName>FlowType__c</fullName>
    <label>Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggiornamento Anagrafica</fullName>
            </value>
            <value>
                <fullName>Captive Clienti</fullName>
            </value>
            <value>
                <fullName>Survey Abbandono</fullName>
            </value>
            <value>
                <fullName>Churn Prevention</fullName>
            </value>
            <value>
                <fullName>Welcome Fui</fullName>
            </value>
            <value>
                <fullName>Survey STG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>