force-app/main/default/objects/Campaign/fields/IdCampaignIBMUnica__c.field-meta.xml
<CustomField>
    <fullName>IdCampaignIBMUnica__c</fullName>
    <externalId>true</externalId>
    <label>Id Campagna IBM Unica</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>