force-app/main/default/objects/Campaign/fields/MaxNumberGASCodeUse__c.field-meta.xml
<CustomField>
    <fullName>MaxNumberGASCodeUse__c</fullName>
    <label>Numero massimo utilizzi codice GAS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>