force-app/main/default/objects/Campaign/fields/MaxNumberVASCodeUse__c.field-meta.xml
<CustomField>
    <fullName>MaxNumberVASCodeUse__c</fullName>
    <label>Numero massimo utilizzi codice VAS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>