force-app/main/default/objects/Campaign/fields/ObligatorySurvey__c.field-meta.xml
<CustomField>
    <fullName>ObligatorySurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Obbligatoria</label>
    <type>Checkbox</type>
</CustomField>