force-app/main/default/objects/Campaign/fields/PaperCampaignParameter__c.field-meta.xml
<CustomField>
    <fullName>PaperCampaignParameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parametri Campagna Cartacea</label>
    <referenceTo>PaperCampaignParameter__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>