force-app/main/default/objects/Campaign/fields/PositiveOutcomeDefaultStatus__c.field-meta.xml
<CustomField>
    <fullName>PositiveOutcomeDefaultStatus__c</fullName>
    <label>Stato Default Esito Positivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conferma IVR</fullName>
            </value>
            <value>
                <fullName>Contattato positivo - Vendita VAS</fullName>
            </value>
            <value>
                <fullName>Contattato positivo - Bonus</fullName>
            </value>
            <value>
                <fullName>Contattato positivo - Cambio offerta</fullName>
            </value>
            <value>
                <fullName>Vendita Extra VO</fullName>
            </value>
            <value>
                <fullName>Contatto positivo - no vendita</fullName>
            </value>
            <value>
                <fullName>Conferma WEB</fullName>
            </value>
            <value>
                <fullName>Conferma già avvenuta</fullName>
            </value>
            <value>
                <fullName>Contratto Accettato</fullName>
            </value>
            <value>
                <fullName>Conferma CC</fullName>
            </value>
            <value>
                <fullName>Conferma e Recupero</fullName>
            </value>
            <value>
                <fullName>Conferma MAIL</fullName>
            </value>
            <value>
                <fullName>Cont.to positivo Cambio off. e vend. VAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>