force-app/main/default/objects/Campaign/fields/PrefixCode__c.field-meta.xml
<CustomField>
    <fullName>PrefixCode__c</fullName>
    <label>Codice Completo / Prefisso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>