force-app/main/default/objects/Campaign/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priorità</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>