force-app/main/default/objects/Campaign/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Tipo Processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuova Vendita</fullName>
            </value>
            <value>
                <fullName>Nuovo Caso</fullName>
            </value>
            <value>
                <fullName>Entrambi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>