force-app/main/default/objects/Campaign/fields/RecurringCampaign__c.field-meta.xml
<CustomField>
    <fullName>RecurringCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Innesca il motore di generazione automatica, identificando la Campagna “Originaria”</description>
    <label>Campagna ricorrente</label>
    <type>Checkbox</type>
</CustomField>