force-app/main/default/objects/Campaign/fields/ReitekIntegrationTechnology__c.field-meta.xml
<CustomField>
    <fullName>ReitekIntegrationTechnology__c</fullName>
    <label>Tecnologia integrazione Reitek</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>