force-app/main/default/objects/Campaign/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obbligatoria</label>
    <type>Checkbox</type>
</CustomField>