force-app/main/default/objects/Campaign/fields/StaticTextMessageBill__c.field-meta.xml
<CustomField>
    <fullName>StaticTextMessageBill__c</fullName>
    <description>Testo Libero, obbligatorio se “Tipo messaggio in Bolletta” = ‘Testo statico e codice’</description>
    <label>Testo statico messaggio Bolletta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>