force-app/main/default/objects/Campaign/fields/SurveyCRM__c.field-meta.xml
<CustomField>
    <fullName>SurveyCRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey CRM</label>
    <referenceTo>SurveyCRM__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>