force-app/main/default/objects/Campaign/validationRules/Case_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Category</fullName>
    <active>true</active>
    <description>Categoria case predefinita dev&apos;essere diversa da HERA</description>
    <errorConditionFormula>ISPICKVAL(CaseCategory__c, &apos;HERA&apos;)</errorConditionFormula>
    <errorDisplayField>CaseCategory__c</errorDisplayField>
    <errorMessage>Categoria Case Predefinita non può essere HERA</errorMessage>
</ValidationRule>